kubernetes/dev/gratie-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gratie-frontend-dev
  namespace: gratie
  labels:
    app: gratie-frontend-dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gratie-frontend-dev
  template:
    metadata:
      labels:
        app: gratie-frontend-dev
    spec:
      containers:
        - name: gratie-frontend-dev
          image: ghcr.io/raj-odc/gratie-frontend:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
