kubernetes/dev/gratie-frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gratie-frontend-dev
  namespace: gratie
spec:
  selector:
    app: gratie-frontend-dev
  ports:
    - port: 80
      targetPort: 3000
