kubernetes/dev/gratie-frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gratie-frontend-dev
  namespace: gratie
spec:
  rules:
    - host: "dev.gratie.xyz"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gratie-frontend-dev
                port:
                  number: 80
